[package]
name = "space_around"
version = "0.1.0"
edition = "2021"

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
#bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
rand = "0.8.5"
wasm-bindgen = "0.2"
bevy_editor_pls = "0.3.1"
bevy_asset_loader = "0.15.0"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", branch = "main" }

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/geieredgar/bevy_ecs_tilemap", branch = "bevy_track" }